package ar.edu.utn.frba.dds;

public class Usuario {
    public String nombre;
    public Usuario(String nombre){
        this.nombre = nombre;
    }

}
